unpackaged/main/default/objects/Return_Merchandise_Authorization_Line_It__c/Return_Merchandise_Authorization_Line_It__c.object-meta.xml
<CustomObject>
    <label>RMA Line Item</label>
    <nameField>
        <displayFormat>RMALI-{00000}</displayFormat>
        <label>Return Merchandise Authorization Line It</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RMA Line Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>