unpackaged/main/default/objects/Return_Merchandise_Authorization_Line_It__c/fields/Credit_Memo_Applied__c.field-meta.xml
<CustomField>
    <fullName>Credit_Memo_Applied__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Credit Memo Applied</label>
    <referenceTo>Manual_Credit_Memo__c</referenceTo>
    <relationshipLabel>RMA Line Item</relationshipLabel>
    <relationshipName>Return_Merchandise_Authorization_Line_It</relationshipName>
    <type>Lookup</type>
</CustomField>