unpackaged/main/default/objects/Return_Merchandise_Authorization_Line_It__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <formula>Related_Sales_Order_Line_Item__r.varcpq__Product__r.Description</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Description</label>
    <type>Text</type>
</CustomField>