unpackaged/main/default/objects/Return_Merchandise_Authorization_Line_It__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>RMA Line Item</relationshipLabel>
    <relationshipName>RMA_Line_Item</relationshipName>
    <type>Lookup</type>
</CustomField>