unpackaged/main/default/objects/Return_Merchandise_Authorization_Line_It__c/fields/Invoice_Line_Reference__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Line_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Line Reference</label>
    <referenceTo>varcpq__Invoice_Line_Item__c</referenceTo>
    <relationshipName>Return_Merchandise_Authorization_Line_It</relationshipName>
    <type>Lookup</type>
</CustomField>