unpackaged/main/default/objects/Return_Merchandise_Authorization_Line_It__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Refunded</fullName>
            </value>
            <value>
                <fullName>Replaced</fullName>
            </value>
            <value>
                <fullName>Not Replaced</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>