unpackaged/main/default/objects/Return_Merchandise_Authorization_Line_It__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Return_Merchandise_Authorization_Line_It</relationshipName>
    <type>Lookup</type>
</CustomField>