unpackaged/main/default/objects/Return_Merchandise_Authorization_Line_It__c/fields/Product_Ava_Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Ava_Tax_Code__c</fullName>
    <formula>Related_Sales_Order_Line_Item__r.Avatax_Tax_code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Ava Tax Code</label>
    <type>Text</type>
</CustomField>