unpackaged/main/default/objects/Return_Merchandise_Authorization_Line_It__c/fields/Related_Sales_Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Related_Sales_Order_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Sales Order Line Item</label>
    <referenceTo>varcpq__Sales_Order_Line_Item__c</referenceTo>
    <relationshipLabel>RMA Line Item</relationshipLabel>
    <relationshipName>RMA_Line_Item</relationshipName>
    <type>Lookup</type>
</CustomField>