unpackaged/main/default/objects/Return_Merchandise_Authorization_Line_It__c/fields/Remain_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Remain_Quantity__c</fullName>
    <formula>Quantity__c  -  Returned_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remain Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>