unpackaged/main/default/objects/Return_Merchandise_Authorization_Line_It__c/fields/Replacement_Order__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Replacement Order</label>
    <referenceTo>varcpq__Sales_Order__c</referenceTo>
    <relationshipName>Return_Merchandise_Authorization_Line_It</relationshipName>
    <type>Lookup</type>
</CustomField>