unpackaged/main/default/objects/Return_Merchandise_Authorization_Line_It__c/fields/Return_Merchandise_Authorization__c.field-meta.xml
<CustomField>
    <fullName>Return_Merchandise_Authorization__c</fullName>
    <label>RMA (Parent)</label>
    <referenceTo>Return_Merchandise_Authorization__c</referenceTo>
    <relationshipName>Return_Merchandise_Authorization_Line_It</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>