unpackaged/main/default/objects/Return_Merchandise_Authorization_Line_It__c/fields/Return_Type__c.field-meta.xml
<CustomField>
    <fullName>Return_Type__c</fullName>
    <label>Return Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Return</fullName>
            </value>
            <value>
                <fullName>Replacement</fullName>
            </value>
            <value>
                <fullName>Exchange</fullName>
            </value>
            <value>
                <fullName>Missing/Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>