unpackaged/main/default/objects/Return_Merchandise_Authorization_Line_It__c/fields/Returned_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Returned_Quantity__c</fullName>
    <label>Returned Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>