unpackaged/main/default/objects/Return_Merchandise_Authorization_Line_It__c/fields/RMA_Tax_Details__c.field-meta.xml
<CustomField>
    <fullName>RMA_Tax_Details__c</fullName>
    <label>RMA Tax Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>