unpackaged/main/default/objects/Return_Merchandise_Authorization_Line_It__c/fields/RMA_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>RMA_Unit_Price__c</fullName>
    <formula>Invoice_Line_Reference__r.varcpq__Sales_Order_Line_Item__r.varcpq__Unit_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>