unpackaged/main/default/objects/Return_Merchandise_Authorization_Line_It__c/fields/Supplier_Credit_Memo_Applied__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Credit_Memo_Applied__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Credit Memo Applied</label>
    <referenceTo>Manual_Credit_Memo__c</referenceTo>
    <relationshipLabel>RMA Line Item</relationshipLabel>
    <relationshipName>RMA_Line_Item</relationshipName>
    <type>Lookup</type>
</CustomField>