unpackaged/main/default/objects/Return_Merchandise_Authorization_Line_It__c/fields/Tax_Amount_GST__c.field-meta.xml
<CustomField>
    <fullName>Tax_Amount_GST__c</fullName>
    <label>Tax Amount GST</label>
    <precision>12</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>