unpackaged/main/default/objects/Return_Merchandise_Authorization_Line_It__c/fields/Tax_Charged_on_Inv_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Tax_Charged_on_Inv_Line_Item__c</fullName>
    <label>Tax Charged on Inv Line Item</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>