unpackaged/main/default/objects/Return_Merchandise_Authorization_Line_It__c/fields/Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rate__c</fullName>
    <formula>ROUND(VALUE(SUBSTITUTE( Tax_Rate_AVATAX__c , &quot;%&quot;, &quot;&quot;)) ,4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>