unpackaged/main/default/objects/Return_Merchandise_Authorization_Line_It__c/fields/Tax_Rate_AVATAX__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rate_AVATAX__c</fullName>
    <label>Tax Rate AVATAX</label>
    <length>20</length>
    <type>Text</type>
</CustomField>