unpackaged/main/default/objects/Return_Merchandise_Authorization_Line_It__c/fields/Tax_Rate_Charged_on_Inv_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rate_Charged_on_Inv_Line_Item__c</fullName>
    <label>Tax Rate Charged on Inv Line Item</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>