unpackaged/main/default/objects/Return_Merchandise_Authorization_Line_It__c/fields/Total_Ext_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Ext_Price__c</fullName>
    <label>Total Ext Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>