unpackaged/main/default/objects/Return_Merchandise_Authorization_Line_It__c/fields/Total_Ext_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Ext_Unit_Cost__c</fullName>
    <formula>Unit_Cost__c  *  Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Ext Unit Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>