unpackaged/main/default/objects/Return_Merchandise_Authorization_Line_It__c/fields/Total_Ext_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Ext_Unit_Price__c</fullName>
    <formula>RMA_Unit_Price__c *  Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Ext Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>