unpackaged/main/default/objects/Return_Merchandise_Authorization_Line_It__c/fields/Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Unit_Cost__c</fullName>
    <formula>Invoice_Line_Reference__r.varcpq__Sales_Order_Line_Item__r.varcpq__Unit_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>